tests/errors/conditional_type_mismatch.dang
# Test conditional with mismatched branch types
pub result = if (true) { "string" } else { 123 }
